# gpuinfo

./: .gitignore  CMakeLists.txt  gpuinfo.cpp  gpuinfo.h  main.cpp
.github/workflows/: build.yml
glad/: gl.c  gl.h  wgl.c  wgl.h
